force-app/main/default/objects/CC_Plantillas_Canal_Procedencia__mdt/CC_Plantillas_Canal_Procedencia__mdt.object-meta.xml
<CustomObject>
    <description>Configuración para la elección de las plantillas dependiendo del canal de procedencia</description>
    <label>Plantillas Canal Procedencia</label>
    <pluralLabel>Plantillas Canal Procedencia</pluralLabel>
</CustomObject>