force-app/main/default/objects/CC_Plantillas_Canal_Procedencia__mdt/fields/CC_Nombre_plantilla_pie__c.field-meta.xml
<CustomField>
    <fullName>CC_Nombre_plantilla_pie__c</fullName>
    <label>Nombre plantilla pie</label>
    <length>150</length>
    <type>Text</type>
</CustomField>