force-app/main/default/objects/CC_Plantillas_Canal_Procedencia__mdt/fields/CC_Tipo_Registro__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Registro__c</fullName>
    <label>Tipo de registro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC_Cliente</fullName>
                <default>true</default>
                <label>CC_Cliente</label>
            </value>
            <value>
                <fullName>CC_Empleado</fullName>
            </value>
            <value>
                <fullName>CC_Empleado_CSI</fullName>
                <label>CC_Empleado_CSI_Bankia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>