force-app/main/default/objects/CC_Plantillas_Canal_Procedencia__mdt/fields/CC_Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>CC_Tratamiento__c</fullName>
    <label>Tratamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>