force-app/main/default/objects/CC_Plantillas_Canal_Procedencia__mdt/listViews/CC_Todos.listView-meta.xml
<ListView>
    <fullName>CC_Todos</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CC_Canal_procedencia__c</columns>
    <columns>CC_Nombre_plantilla_cabecera__c</columns>
    <columns>CC_Nombre_plantilla_pie__c</columns>
    <columns>CC_Operativa__c</columns>
    <columns>CC_Tratamiento__c</columns>
    <columns>CC_Tipo_Registro__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>